--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ margin:0;
 padding:0;
 box-sizing:border-box;
 font-family:monospace;
-scroll-behavior:smooth;
 }
 
 body{
@@ -20,164 +19,194 @@ color:#ff0000;
 overflow-x:hidden;
 }
 
-/* LOADING SCREEN */
-#loader{
-position:fixed;
-width:100%;
-height:100%;
-background:#000;
+/* HERO SECTION */
+.hero{
+height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
-flex-direction:column;
-z-index:9999;
+position:relative;
+background:#050505;
+overflow:hidden;
 }
 
-#loader h1{
-font-size:28px;
-animation:pulse 1s infinite alternate;
+.scanline{
+position:absolute;
+width:100%;
+height:2px;
+background:rgba(255,0,0,0.3);
+animation:scan 4s linear infinite;
 }
 
-@keyframes pulse{
-from{opacity:0.3;}
-to{opacity:1;}
+@keyframes scan{
+0%{top:0;}
+100%{top:100%;}
 }
 
-/* MATRIX BACKGROUND */
-canvas{
-position:fixed;
-top:0;
+.hero-content{
+display:flex;
+align-items:center;
+gap:80px;
+z-index:2;
+}
+
+/* PROFILE CIRCLE */
+.profile-wrap{
+position:relative;
+width:220px;
+height:220px;
+}
+
+.profile-wrap img{
+width:100%;
+height:100%;
+border-radius:50%;
+border:3px solid red;
+box-shadow:0 0 30px red;
+}
+
+.ring{
+position:absolute;
+width:260px;
+height:260px;
+border:2px solid red;
+border-radius:50%;
+top:-20px;
+left:-20px;
+animation:rotate 10s linear infinite;
+opacity:0.6;
+}
+
+@keyframes rotate{
+from{transform:rotate(0deg);}
+to{transform:rotate(360deg);}
+}
+
+/* GLITCH TITLE */
+.glitch{
+font-size:48px;
+position:relative;
+text-shadow:0 0 20px red;
+}
+
+.glitch:before,
+.glitch:after{
+content:attr(data-text);
+position:absolute;
 left:0;
-z-index:-1;
+width:100%;
 }
 
-/* HEADER */
-header{
-padding:100px 20px;
-text-align:center;
-border-bottom:1px solid #ff0000;
+.glitch:before{
+animation:glitch1 2s infinite;
+color:red;
+opacity:0.5;
 }
 
-header h1{
-font-size:40px;
-letter-spacing:4px;
-text-shadow:0 0 15px red;
+.glitch:after{
+animation:glitch2 2s infinite;
+color:#ff4d4d;
+opacity:0.5;
 }
 
-header p{
-margin-top:10px;
-color:#888;
+@keyframes glitch1{
+0%{transform:translate(0);}
+20%{transform:translate(-2px,2px);}
+40%{transform:translate(-2px,-2px);}
+60%{transform:translate(2px,2px);}
+80%{transform:translate(2px,-2px);}
+100%{transform:translate(0);}
 }
 
-/* SECTION */
-section{
-padding:80px 20px;
-max-width:1000px;
+@keyframes glitch2{
+0%{transform:translate(0);}
+20%{transform:translate(2px,-2px);}
+40%{transform:translate(2px,2px);}
+60%{transform:translate(-2px,-2px);}
+80%{transform:translate(-2px,2px);}
+100%{transform:translate(0);}
+}
+
+.identity{
+margin-top:20px;
+line-height:1.8;
+color:#aaa;
+}
+
+/* SECTION BELOW */
+.section{
+padding:120px 20px;
+max-width:1100px;
 margin:auto;
 }
 
-/* PROFILE */
-.profile{
-display:flex;
-flex-wrap:wrap;
-align-items:center;
-gap:30px;
-}
-
-.profile img{
-width:150px;
-height:150px;
-border-radius:50%;
-border:3px solid red;
-box-shadow:0 0 20px red;
-}
-
-.profile-info{
-flex:1;
-}
-
-/* MODULE CARDS */
+/* MODULES */
 .modules{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:20px;
-margin-top:40px;
+gap:25px;
 }
 
 .card{
 border:1px solid red;
-padding:20px;
+padding:25px;
 transition:0.3s;
-background:rgba(0,0,0,0.6);
+background:rgba(10,10,10,0.8);
 }
 
 .card:hover{
-box-shadow:0 0 25px red;
+box-shadow:0 0 30px red;
 transform:translateY(-5px);
 }
 
 /* TERMINAL */
 .terminal{
-background:#111;
-padding:20px;
+margin-top:60px;
+background:#0a0a0a;
 border:1px solid red;
+padding:20px;
 min-height:200px;
 }
 
-.terminal p{
-margin:5px 0;
-}
-
-/* DATA STREAM */
-.datastream{
-margin-top:30px;
-color:#555;
-font-size:14px;
-height:150px;
-overflow:hidden;
-}
-
-/* FOOTER */
 footer{
 text-align:center;
-padding:40px;
+padding:60px;
 border-top:1px solid red;
 color:#666;
-}
-
-/* SCROLLBAR */
-::-webkit-scrollbar{
-width:8px;
-}
-::-webkit-scrollbar-thumb{
-background:red;
 }
 </style>
 </head>
 
 <body>
 
-<div id="loader">
-<h1>ACCESSING DIGITAL CORE...</h1>
-</div>
+<div class="hero">
+<div class="scanline"></div>
 
-<canvas id="matrix"></canvas>
+<div class="hero-content">
 
-<header>
-<h1>ANKB7T // DIGITAL CORE</h1>
-<p>ACCESS LEVEL: ROOT // STATUS: ONLINE</p>
-</header>
-
-<section>
-<div class="profile">
+<div class="profile-wrap">
+<div class="ring"></div>
 <img src="https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg">
-<div class="profile-info">
-<p>Operator: ANKB7T</p>
-<p>Domain: Digital Warfare</p>
-<p>Encryption: AES-256</p>
-<p>Status: Untraceable</p>
+</div>
+
+<div>
+<div class="glitch" data-text="ANKB7T">ANKB7T</div>
+<div class="identity">
+[ DIGITAL IDENTITY ]<br>
+ID: ANKB7T<br>
+ROLE: SYSTEM OPERATOR<br>
+ACCESS: ROOT<br>
+STATUS: ONLINE<br>
+TRACE: 0%
 </div>
 </div>
+
+</div>
+</div>
+
+<div class="section">
+
+<h2 style="margin-bottom:40px;">SYSTEM MODULES</h2>
 
 <div class="modules">
 <div class="card">[01] NETWORK GRID</div>
@@ -187,14 +216,10 @@ background:red;
 <div class="card">[05] DARK ARCHIVE</div>
 <div class="card">[06] COMMAND CONSOLE</div>
 </div>
-</section>
 
-<section>
-<h2>LIVE TERMINAL</h2>
 <div class="terminal" id="terminal"></div>
 
-<div class="datastream" id="datastream"></div>
-</section>
+</div>
 
 <footer>
 SYSTEM LOCKED // ENCRYPTED // 2026<br>
@@ -202,24 +227,16 @@ PROPERTY OF ANKB7T
 </footer>
 
 <script>
-
-/* LOADER */
-window.onload = function(){
-setTimeout(()=>{
-document.getElementById("loader").style.display="none";
-},2000);
-};
-
-/* TERMINAL TYPING */
 const terminal = document.getElementById("terminal");
 const lines = [
-"> establishing secure connection...",
-"> bypassing firewall...",
-"> access granted.",
-"> welcome operator."
+"> initializing core...",
+"> scanning network...",
+"> intrusion detection active...",
+"> access granted."
 ];
 
 let i=0;
+
 function typeLine(){
 if(i<lines.length){
 let p=document.createElement("p");
@@ -229,56 +246,8 @@ i++;
 setTimeout(typeLine,800);
 }
 }
-setTimeout(typeLine,2000);
 
-/* DATA STREAM */
-const stream=document.getElementById("datastream");
-setInterval(()=>{
-let p=document.createElement("p");
-p.textContent="Signal intercepted // IP: "+Math.floor(Math.random()*255)+"."+Math.floor(Math.random()*255)+"."+Math.floor(Math.random()*255)+"."+Math.floor(Math.random()*255);
-stream.appendChild(p);
-if(stream.children.length>10){
-stream.removeChild(stream.firstChild);
-}
-},1000);
-
-/* MATRIX */
-const canvas=document.getElementById("matrix");
-const ctx=canvas.getContext("2d");
-
-canvas.height=window.innerHeight;
-canvas.width=window.innerWidth;
-
-let letters="01";
-letters=letters.split("");
-
-let fontSize=14;
-let columns=canvas.width/fontSize;
-
-let drops=[];
-for(let x=0;x<columns;x++)
-drops[x]=1;
-
-function draw(){
-ctx.fillStyle="rgba(0,0,0,0.05)";
-ctx.fillRect(0,0,canvas.width,canvas.height);
-
-ctx.fillStyle="#ff0000";
-ctx.font=fontSize+"px monospace";
-
-for(let i=0;i<drops.length;i++){
-let text=letters[Math.floor(Math.random()*letters.length)];
-ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-
-if(drops[i]*fontSize>canvas.height && Math.random()>0.975)
-drops[i]=0;
-
-drops[i]++;
-}
-}
-
-setInterval(draw,33);
-
+setTimeout(typeLine,1500);
 </script>
 
 </body>
