--- a/index.html
+++ b/index.html
@@ -1,253 +1,139 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ANKB7T // DIGITAL CORE</title>
+<title>ANKB7T SYSTEM</title>
 
 <style>
 *{
-margin:0;
-padding:0;
-box-sizing:border-box;
-font-family:monospace;
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: monospace;
 }
 
 body{
-background:#000;
-color:#ff0000;
-overflow-x:hidden;
+    background:black;
+    color:red;
+    overflow-x:hidden;
 }
 
-/* HERO SECTION */
-.hero{
-height:100vh;
-display:flex;
-justify-content:center;
-align-items:center;
-position:relative;
-background:#050505;
-overflow:hidden;
+/* MATRIX BACKGROUND */
+canvas{
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:-1;
 }
 
-.scanline{
-position:absolute;
-width:100%;
-height:2px;
-background:rgba(255,0,0,0.3);
-animation:scan 4s linear infinite;
-}
-
-@keyframes scan{
-0%{top:0;}
-100%{top:100%;}
-}
-
-.hero-content{
-display:flex;
-align-items:center;
-gap:80px;
-z-index:2;
-}
-
-/* PROFILE CIRCLE */
-.profile-wrap{
-position:relative;
-width:220px;
-height:220px;
-}
-
-.profile-wrap img{
-width:100%;
-height:100%;
-border-radius:50%;
-border:3px solid red;
-box-shadow:0 0 30px red;
-}
-
-.ring{
-position:absolute;
-width:260px;
-height:260px;
-border:2px solid red;
-border-radius:50%;
-top:-20px;
-left:-20px;
-animation:rotate 10s linear infinite;
-opacity:0.6;
-}
-
-@keyframes rotate{
-from{transform:rotate(0deg);}
-to{transform:rotate(360deg);}
-}
-
-/* GLITCH TITLE */
-.glitch{
-font-size:48px;
-position:relative;
-text-shadow:0 0 20px red;
-}
-
-.glitch:before,
-.glitch:after{
-content:attr(data-text);
-position:absolute;
-left:0;
-width:100%;
-}
-
-.glitch:before{
-animation:glitch1 2s infinite;
-color:red;
-opacity:0.5;
-}
-
-.glitch:after{
-animation:glitch2 2s infinite;
-color:#ff4d4d;
-opacity:0.5;
-}
-
-@keyframes glitch1{
-0%{transform:translate(0);}
-20%{transform:translate(-2px,2px);}
-40%{transform:translate(-2px,-2px);}
-60%{transform:translate(2px,2px);}
-80%{transform:translate(2px,-2px);}
-100%{transform:translate(0);}
-}
-
-@keyframes glitch2{
-0%{transform:translate(0);}
-20%{transform:translate(2px,-2px);}
-40%{transform:translate(2px,2px);}
-60%{transform:translate(-2px,-2px);}
-80%{transform:translate(-2px,2px);}
-100%{transform:translate(0);}
-}
-
-.identity{
-margin-top:20px;
-line-height:1.8;
-color:#aaa;
-}
-
-/* SECTION BELOW */
+/* SECTION */
 .section{
-padding:120px 20px;
-max-width:1100px;
-margin:auto;
+    padding:100px 8%;
 }
 
-/* MODULES */
-.modules{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:25px;
+.section h1{
+    font-size:28px;
+    margin-bottom:50px;
+    letter-spacing:2px;
 }
 
+/* GRID */
+.grid{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+    gap:40px;
+}
+
+/* CARD */
 .card{
-border:1px solid red;
-padding:25px;
-transition:0.3s;
-background:rgba(10,10,10,0.8);
+    border:1px solid red;
+    padding:40px;
+    text-decoration:none;
+    color:red;
+    transition:0.3s;
+    position:relative;
+    backdrop-filter: blur(4px);
 }
 
 .card:hover{
-box-shadow:0 0 30px red;
-transform:translateY(-5px);
+    background:red;
+    color:black;
+    box-shadow:0 0 20px red;
+    transform:scale(1.05);
 }
 
 /* TERMINAL */
 .terminal{
-margin-top:60px;
-background:#0a0a0a;
-border:1px solid red;
-padding:20px;
-min-height:200px;
-}
-
-footer{
-text-align:center;
-padding:60px;
-border-top:1px solid red;
-color:#666;
+    margin-top:80px;
+    border:1px solid red;
+    padding:30px;
+    font-size:14px;
+    line-height:22px;
 }
 </style>
 </head>
-
 <body>
 
-<div class="hero">
-<div class="scanline"></div>
-
-<div class="hero-content">
-
-<div class="profile-wrap">
-<div class="ring"></div>
-<img src="https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg">
-</div>
-
-<div>
-<div class="glitch" data-text="ANKB7T">ANKB7T</div>
-<div class="identity">
-[ DIGITAL IDENTITY ]<br>
-ID: ANKB7T<br>
-ROLE: SYSTEM OPERATOR<br>
-ACCESS: ROOT<br>
-STATUS: ONLINE<br>
-TRACE: 0%
-</div>
-</div>
-
-</div>
-</div>
+<canvas id="matrix"></canvas>
 
 <div class="section">
+    <h1>SYSTEM MODULES</h1>
 
-<h2 style="margin-bottom:40px;">SYSTEM MODULES</h2>
+    <div class="grid">
 
-<div class="modules">
-<div class="card">[01] NETWORK GRID</div>
-<div class="card">[02] ENCRYPTION VAULT</div>
-<div class="card">[03] ACCESS TERMINAL</div>
-<div class="card">[04] SIGNAL INTELLIGENCE</div>
-<div class="card">[05] DARK ARCHIVE</div>
-<div class="card">[06] COMMAND CONSOLE</div>
+        <a href="https://t.me/allesfurdie" class="card">[01] NETWORK GRID</a>
+        <a href="https://instagram.com/hissedilme" class="card">[02] ENCRYPTION VAULT</a>
+        <a href="#" class="card">[03] ACCESS TERMINAL</a>
+        <a href="#" class="card">[04] SIGNAL INTELLIGENCE</a>
+        <a href="#" class="card">[05] DARK ARCHIVE</a>
+        <a href="#" class="card">[06] COMMAND CONSOLE</a>
+
+    </div>
+
+    <div class="terminal">
+        <p>> initializing core...</p>
+        <p>> scanning network...</p>
+        <p>> intrusion detection active...</p>
+        <p>> access granted.</p>
+    </div>
+
 </div>
-
-<div class="terminal" id="terminal"></div>
-
-</div>
-
-<footer>
-SYSTEM LOCKED // ENCRYPTED // 2026<br>
-PROPERTY OF ANKB7T
-</footer>
 
 <script>
-const terminal = document.getElementById("terminal");
-const lines = [
-"> initializing core...",
-"> scanning network...",
-"> intrusion detection active...",
-"> access granted."
-];
+const canvas = document.getElementById("matrix");
+const ctx = canvas.getContext("2d");
 
-let i=0;
+canvas.height = window.innerHeight;
+canvas.width = window.innerWidth;
 
-function typeLine(){
-if(i<lines.length){
-let p=document.createElement("p");
-p.textContent=lines[i];
-terminal.appendChild(p);
-i++;
-setTimeout(typeLine,800);
+const letters = "01ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+const fontSize = 14;
+const columns = canvas.width / fontSize;
+
+const drops = [];
+for(let x = 0; x < columns; x++)
+    drops[x] = 1;
+
+function draw(){
+    ctx.fillStyle = "rgba(0,0,0,0.05)";
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+
+    ctx.fillStyle = "red";
+    ctx.font = fontSize + "px monospace";
+
+    for(let i=0; i<drops.length; i++){
+        const text = letters[Math.floor(Math.random()*letters.length)];
+        ctx.fillText(text, i*fontSize, drops[i]*fontSize);
+
+        if(drops[i]*fontSize > canvas.height && Math.random() > 0.975)
+            drops[i] = 0;
+
+        drops[i]++;
+    }
 }
-}
 
-setTimeout(typeLine,1500);
+setInterval(draw, 35);
 </script>
 
 </body>
