--- a/index.html
+++ b/index.html
@@ -1,182 +1,201 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ANKB7T CORE</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Identity Card</title>
+    <style>
+        :root {
+            --primary-red: #ff0000;
+            --dark-red: #8b0000;
+            --bg-black: #050505;
+        }
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:monospace;}
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--bg-black);
+            color: var(--primary-red);
+            font-family: 'Courier New', Courier, monospace;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-body{
-    background:#000;
-    color:#ff0000;
-    overflow-x:hidden;
-}
+        /* Matrix Arka Plan */
+        #canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 0;
+            opacity: 0.15;
+        }
 
-canvas{
-    position:fixed;
-    top:0;
-    left:0;
-    z-index:-1;
-}
+        /* Giriş Ekranı */
+        #intro-screen {
+            position: absolute;
+            z-index: 10;
+            text-align: center;
+        }
 
-.top-date{
-    position:fixed;
-    top:20px;
-    right:30px;
-    font-size:14px;
-    opacity:0.8;
-}
+        .open-btn {
+            background: transparent;
+            color: var(--primary-red);
+            border: 2px solid var(--primary-red);
+            padding: 20px 50px;
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+            letter-spacing: 5px;
+            transition: 0.3s;
+            box-shadow: 0 0 15px var(--dark-red);
+        }
 
-.wrapper{
-    padding:100px 8%;
-}
+        .open-btn:hover {
+            background: var(--primary-red);
+            color: black;
+            box-shadow: 0 0 30px var(--primary-red);
+        }
 
-.id-card{
-    border:1px solid red;
-    padding:40px;
-    margin-bottom:80px;
-    background:rgba(0,0,0,0.7);
-    box-shadow:0 0 20px rgba(255,0,0,0.3);
-}
+        /* Ana Panel */
+        #main-panel {
+            display: none;
+            position: relative;
+            z-index: 5;
+            width: 90%;
+            max-width: 600px;
+            border: 1px solid var(--primary-red);
+            padding: 30px;
+            background: rgba(0, 0, 0, 0.85);
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
+        }
 
-.id-title{
-    font-size:22px;
-    margin-bottom:20px;
-    letter-spacing:2px;
-}
+        .card-header {
+            text-align: center;
+            border-bottom: 1px solid var(--primary-red);
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+            font-size: 22px;
+            letter-spacing: 3px;
+        }
 
-.id-info p{margin:6px 0;}
+        .info-section {
+            line-height: 1.6;
+            margin-bottom: 30px;
+        }
 
-.modules{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-    gap:40px;
-}
+        .info-row { display: flex; margin-bottom: 5px; }
+        .label { width: 100px; color: var(--dark-red); }
 
-.module{
-    border:1px solid red;
-    padding:35px;
-    text-decoration:none;
-    color:red;
-    transition:0.3s;
-    background:rgba(0,0,0,0.7);
-}
+        .button-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 15px;
+        }
 
-.module:hover{
-    background:red;
-    color:black;
-    box-shadow:0 0 25px red;
-    transform:scale(1.05);
-}
+        .social-link {
+            border: 1px solid var(--primary-red);
+            padding: 15px;
+            text-decoration: none;
+            color: var(--primary-red);
+            display: flex;
+            align-items: center;
+            transition: 0.3s;
+            background: rgba(255, 0, 0, 0.05);
+        }
 
-.terminal{
-    margin-top:80px;
-    border:1px solid red;
-    padding:25px;
-    font-size:14px;
-    line-height:22px;
-    background:rgba(0,0,0,0.7);
-}
+        .social-link:hover {
+            background: var(--primary-red);
+            color: black;
+        }
 
-.fake-ip{
-    margin-top:40px;
-    font-size:13px;
-    opacity:0.7;
-}
+        .num { margin-right: 15px; font-weight: bold; }
 
-.blink{animation:blink 1s infinite;}
+        @keyframes scanline {
+            0% { transform: translateY(-100%); }
+            100% { transform: translateY(100%); }
+        }
 
-@keyframes blink{
-    0%{opacity:0}
-    50%{opacity:1}
-    100%{opacity:0}
-}
-</style>
+        .scanline {
+            width: 100%;
+            height: 2px;
+            background: rgba(255, 0, 0, 0.1);
+            position: absolute;
+            animation: scanline 6s linear infinite;
+        }
+    </style>
 </head>
 <body>
 
-<canvas id="matrix"></canvas>
-<div class="top-date" id="date"></div>
+    <canvas id="canvas"></canvas>
+    <div class="scanline"></div>
 
-<div class="wrapper">
+    <div id="intro-screen">
+        <button class="open-btn" onclick="startSystem()">[ OPEN ]</button>
+    </div>
 
-    <div class="id-card">
-        <div class="id-title">[ DIGITAL IDENTITY CARD ]</div>
-        <div class="id-info">
-            <p>ID: ANKB7T</p>
-            <p>ROLE: SYSTEM OPERATOR</p>
-            <p>ACCESS: ROOT</p>
-            <p>STATUS: ONLINE</p>
+    <div id="main-panel">
+        <div class="card-header">[ DIGITAL IDENTITY CARD ]</div>
+        
+        <div class="info-section">
+            <div class="info-row"><span class="label">ID:</span> ANKB7T</div>
+            <div class="info-row"><span class="label">ROLE:</span> SYSTEM OPERATOR</div>
+            <div class="info-row"><span class="label">ACCESS:</span> ROOT</div>
+            <div class="info-row"><span class="label">STATUS:</span> ONLINE</div>
+        </div>
+
+        <div class="button-grid">
+            <a href="https://t.me/allesfurdie" class="social-link" target="_blank">
+                <span class="num">[01]</span> TELEGRAM (@allesfurdie)
+            </a>
+            <a href="https://instagram.com/hissedilme" class="social-link" target="_blank">
+                <span class="num">[02]</span> INSTAGRAM (@hissedilme)
+            </a>
+            <a href="https://wa.me/998998780248" class="social-link" target="_blank">
+                <span class="num">[03]</span> WHATSAPP (+998998780248)
+            </a>
         </div>
     </div>
 
-    <div class="modules">
-        <a href="https://t.me/allesfurdie" target="_blank" class="module">[01] TELEGRAM</a>
-        <a href="https://instagram.com/hissedilme" target="_blank" class="module">[02] INSTAGRAM</a>
-        <a href="https://www.turkhackteam.org/" target="_blank" class="module">[03] DARK ARCHIVE</a>
-        <a href="https://darkwebdaily.live/" target="_blank" class="module">[04] DARK WEB DAILY</a>
-        <a href="#" class="module">[05] COMMAND CONSOLE</a>
-        <a href="#" class="module">[06] ACCESS TERMINAL</a>
-    </div>
+    <script>
+        // Matrix Efekti
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
 
-    <div class="terminal">
-        <p>> initializing core...</p>
-        <p>> scanning network...</p>
-        <p>> bypassing firewall...</p>
-        <p>> root access granted<span class="blink">_</span></p>
-    </div>
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
 
-    <div class="fake-ip" id="fakeip"></div>
+        const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%&*";
+        const fontSize = 16;
+        const columns = canvas.width / fontSize;
+        const drops = [];
 
-</div>
+        for (let i = 0; i < columns; i++) drops[i] = 1;
 
-<script>
-const canvas=document.getElementById("matrix");
-const ctx=canvas.getContext("2d");
-canvas.height=window.innerHeight;
-canvas.width=window.innerWidth;
+        function drawMatrix() {
+            ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = "#8b0000"; 
+            ctx.font = fontSize + "px monospace";
 
-const letters="01ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-const fontSize=14;
-const columns=canvas.width/fontSize;
-const drops=[];
+            for (let i = 0; i < drops.length; i++) {
+                const text = letters.charAt(Math.floor(Math.random() * letters.length));
+                ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+                if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+                drops[i]++;
+            }
+        }
 
-for(let x=0;x<columns;x++) drops[x]=1;
+        setInterval(drawMatrix, 50);
 
-function draw(){
-    ctx.fillStyle="rgba(0,0,0,0.05)";
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-    ctx.fillStyle="#ff0000";
-    ctx.font=fontSize+"px monospace";
-    for(let i=0;i<drops.length;i++){
-        const text=letters[Math.floor(Math.random()*letters.length)];
-        ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-        if(drops[i]*fontSize>canvas.height && Math.random()>0.975)
-            drops[i]=0;
-        drops[i]++;
-    }
-}
-setInterval(draw,35);
-
-function updateDate(){
-    const now=new Date();
-    document.getElementById("date").innerHTML=now.toLocaleString();
-}
-setInterval(updateDate,1000);
-updateDate();
-
-function randomIP(){
-    return Math.floor(Math.random()*255)+"."+
-           Math.floor(Math.random()*255)+"."+
-           Math.floor(Math.random()*255)+"."+
-           Math.floor(Math.random()*255);
-}
-
-document.getElementById("fakeip").innerHTML=
-"> connection trace detected<br>IP: "+randomIP()+"<br>Status: Monitoring...";
-</script>
-
+        // Giriş Fonksiyonu
+        function startSystem() {
+            document.getElementById('intro-screen').style.display = 'none';
+            document.getElementById('main-panel').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
