--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Identity Card</title>
+    <title>Ankeb7t | Identity Card</title>
     <style>
         :root {
             --primary-red: #ff0000;
-            --dark-red: #8b0000;
+            --dark-red: #660000;
             --bg-black: #050505;
         }
 
         body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
+            margin: 0; padding: 0;
+            width: 100%; height: 100%;
             background-color: var(--bg-black);
             color: var(--primary-red);
             font-family: 'Courier New', Courier, monospace;
@@ -25,20 +23,41 @@
             align-items: center;
         }
 
-        /* Matrix Arka Plan */
-        #canvas {
+        /* Arka Planda Kayan Yazı Şeridi */
+        .scrolling-wrapper {
             position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 0;
-            opacity: 0.15;
+            top: 20%; /* Yazının geçeceği yükseklik */
+            width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            z-index: 1;
+            opacity: 0.3;
+            pointer-events: none;
+        }
+
+        .scrolling-text {
+            display: inline-block;
+            font-size: 80px;
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: 20px;
+            animation: scroll-left 15s linear infinite;
+        }
+
+        @keyframes scroll-left {
+            from { transform: translateX(100%); }
+            to { transform: translateX(-100%); }
+        }
+
+        /* Matrix Canvas */
+        #canvas {
+            position: fixed; top: 0; left: 0;
+            z-index: 0; opacity: 0.1;
         }
 
         /* Giriş Ekranı */
         #intro-screen {
-            position: absolute;
-            z-index: 10;
-            text-align: center;
+            position: absolute; z-index: 100; text-align: center;
         }
 
         .open-btn {
@@ -47,54 +66,40 @@
             border: 2px solid var(--primary-red);
             padding: 20px 50px;
             font-size: 24px;
-            font-weight: bold;
             cursor: pointer;
-            letter-spacing: 5px;
-            transition: 0.3s;
             box-shadow: 0 0 15px var(--dark-red);
+            transition: 0.3s;
         }
 
-        .open-btn:hover {
-            background: var(--primary-red);
-            color: black;
-            box-shadow: 0 0 30px var(--primary-red);
-        }
+        .open-btn:hover { background: var(--primary-red); color: black; }
 
         /* Ana Panel */
         #main-panel {
             display: none;
             position: relative;
-            z-index: 5;
+            z-index: 10;
             width: 90%;
-            max-width: 600px;
+            max-width: 550px;
             border: 1px solid var(--primary-red);
-            padding: 30px;
-            background: rgba(0, 0, 0, 0.85);
-            box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
+            padding: 40px;
+            background: rgba(0, 0, 0, 0.9);
+            box-shadow: 0 0 30px rgba(255, 0, 0, 0.2);
         }
 
         .card-header {
             text-align: center;
             border-bottom: 1px solid var(--primary-red);
-            margin-bottom: 20px;
-            padding-bottom: 10px;
-            font-size: 22px;
-            letter-spacing: 3px;
+            margin-bottom: 25px;
+            padding-bottom: 15px;
+            font-size: 20px;
+            letter-spacing: 5px;
         }
 
-        .info-section {
-            line-height: 1.6;
-            margin-bottom: 30px;
-        }
+        .info-section { margin-bottom: 30px; }
+        .info-row { display: flex; margin-bottom: 8px; font-size: 16px; }
+        .label { width: 120px; color: #555; font-weight: bold; }
 
-        .info-row { display: flex; margin-bottom: 5px; }
-        .label { width: 100px; color: var(--dark-red); }
-
-        .button-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 15px;
-        }
+        .button-grid { display: grid; gap: 15px; }
 
         .social-link {
             border: 1px solid var(--primary-red);
@@ -102,36 +107,21 @@
             text-decoration: none;
             color: var(--primary-red);
             display: flex;
-            align-items: center;
             transition: 0.3s;
-            background: rgba(255, 0, 0, 0.05);
         }
 
-        .social-link:hover {
-            background: var(--primary-red);
-            color: black;
-        }
+        .social-link:hover { background: var(--primary-red); color: black; }
+        .num { margin-right: 15px; opacity: 0.7; }
 
-        .num { margin-right: 15px; font-weight: bold; }
-
-        @keyframes scanline {
-            0% { transform: translateY(-100%); }
-            100% { transform: translateY(100%); }
-        }
-
-        .scanline {
-            width: 100%;
-            height: 2px;
-            background: rgba(255, 0, 0, 0.1);
-            position: absolute;
-            animation: scanline 6s linear infinite;
-        }
     </style>
 </head>
 <body>
 
     <canvas id="canvas"></canvas>
-    <div class="scanline"></div>
+
+    <div class="scrolling-wrapper">
+        <div class="scrolling-text">ANKEB7T — ANKEB7T — ANKEB7T — ANKEB7T — ANKEB7T</div>
+    </div>
 
     <div id="intro-screen">
         <button class="open-btn" onclick="startSystem()">[ OPEN ]</button>
@@ -141,10 +131,10 @@
         <div class="card-header">[ DIGITAL IDENTITY CARD ]</div>
         
         <div class="info-section">
+            <div class="info-row"><span class="label">ID:</span> ANKB7T</div>
             <div class="info-row"><span class="label">ROLE:</span> PHANTOM OPERATOR</div>
             <div class="info-row"><span class="label">ACCESS:</span> SYSTEM OVERRIDE</div>
             <div class="info-row"><span class="label">STATUS:</span> UNDETECTED</div>
-
         </div>
 
         <div class="button-grid">
@@ -161,26 +151,21 @@
     </div>
 
     <script>
-        // Matrix Efekti
+        // Matrix Animasyonu
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
-
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
-
-        const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%&*";
+        const letters = "01";
         const fontSize = 16;
         const columns = canvas.width / fontSize;
-        const drops = [];
-
-        for (let i = 0; i < columns; i++) drops[i] = 1;
+        const drops = Array(Math.floor(columns)).fill(1);
 
         function drawMatrix() {
             ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
-            ctx.fillStyle = "#8b0000"; 
+            ctx.fillStyle = "#300"; 
             ctx.font = fontSize + "px monospace";
-
             for (let i = 0; i < drops.length; i++) {
                 const text = letters.charAt(Math.floor(Math.random() * letters.length));
                 ctx.fillText(text, i * fontSize, drops[i] * fontSize);
@@ -188,10 +173,9 @@
                 drops[i]++;
             }
         }
-
         setInterval(drawMatrix, 50);
 
-        // Giriş Fonksiyonu
+        // Sistemi Başlat
         function startSystem() {
             document.getElementById('intro-screen').style.display = 'none';
             document.getElementById('main-panel').style.display = 'block';
