--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -10,48 +9,45 @@
 body{
 margin:0;
 background:black;
-color:red;
 font-family:Courier New, monospace;
 overflow:hidden;
+color:red;
 }
 
-/* Büyük arka yazılar */
-.big{
+/* SHINE TEXT */
+.shineText{
 position:fixed;
 width:100%;
 text-align:center;
 font-weight:900;
 letter-spacing:30px;
-pointer-events:none;
+background:linear-gradient(
+90deg,
+#550000 0%,
+#ff0000 40%,
+white 50%,
+#ff0000 60%,
+#550000 100%
+);
+background-size:200% auto;
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
+animation:shine 4s linear infinite;
+}
+
+@keyframes shine{
+0%{background-position:-200% center;}
+100%{background-position:200% center;}
 }
 
 #top{
 top:70px;
 font-size:120px;
-opacity:.25;
 }
 
 #bottom{
 bottom:40px;
 font-size:90px;
-opacity:.25;
-}
-
-/* Shine efekti */
-.shine{
-position:fixed;
-top:0;
-left:-100%;
-width:200%;
-height:100%;
-background:linear-gradient(120deg,transparent 40%,rgba(255,255,255,.8),transparent 60%);
-animation:shine 4s linear infinite;
-pointer-events:none;
-}
-
-@keyframes shine{
-0%{left:-100%;}
-100%{left:100%;}
 }
 
 /* Tarih */
@@ -59,15 +55,14 @@ pointer-events:none;
 position:fixed;
 top:20px;
 right:30px;
-letter-spacing:3px;
 font-size:14px;
+letter-spacing:3px;
 }
 
-/* OPEN ekran */
+/* OPEN */
 #openScreen{
 height:100vh;
 display:flex;
-flex-direction:column;
 justify-content:center;
 align-items:center;
 }
@@ -129,9 +124,8 @@ color:black;
 
 <body>
 
-<div class="big" id="top">ANKEB7T</div>
-<div class="big" id="bottom">ZIRVE</div>
-<div class="shine"></div>
+<div class="shineText" id="top">ANKEB7T</div>
+<div class="shineText" id="bottom">ZIRVE</div>
 
 <div id="datetime"></div>
 
@@ -151,25 +145,35 @@ color:black;
 <!-- PANEL -->
 <div id="panel">
 <div class="box">
+
 <h2 style="letter-spacing:10px;">ANKEB7T</h2>
 
-<div class="link" onclick="window.open('https://t.me/allesfurdie')">TELEGRAM</div>
-<div class="link" onclick="window.open('https://instagram.com/hissedilme')">INSTAGRAM</div>
-<div class="link" onclick="window.open('https://wa.me/998998780248')">WHATSAPP</div>
+<div class="link" onclick="window.open('https://t.me/allesfurdie')">
+TELEGRAM
+</div>
+
+<div class="link" onclick="window.open('https://instagram.com/ankeb7t27')">
+INSTAGRAM
+</div>
+
+<div class="link" onclick="window.open('https://wa.me/998998780248')">
+WHATSAPP
+</div>
 
 <p style="margin-top:40px;letter-spacing:8px;opacity:.6;">
 ALLES FUR DIE
 </p>
+
 </div>
 </div>
 
 <script>
-/* Tarih anında */
+/* Tarih */
 function updateTime(){
 const now=new Date();
-const d=now.toLocaleDateString("tr-TR");
-const t=now.toLocaleTimeString("tr-TR");
-document.getElementById("datetime").innerHTML=d+"<br>"+t;
+document.getElementById("datetime").innerHTML=
+now.toLocaleDateString("tr-TR")+"<br>"+
+now.toLocaleTimeString("tr-TR");
 }
 updateTime();
 setInterval(updateTime,1000);
